fixed that stupid horizontal overflow shit

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -222,7 +222,6 @@ body.home .navbar {
    ========================================================================== */
 .slider-wrapper {
    #gradient.vertical(#FEFEFE; #DCF1EC; 5%; 95%);
-   width: 100%;
 }
 .royalSlider {
   width: 100%;
